--- a/config/i3/config
+++ b/config/i3/config
@@ -94,13 +94,16 @@ bindsym $mod+a focus parent
 # focus the child container
 #bindsym $mod+d focus child
 
-set $workspace1 "1: Terminal"
-set $workspace2 "2: Browser"
-set $workspace3 "3: vim"
-set $workspace4 "4: Email+Misc"
-set $workspace5 "5: pyLoad"
-set $workspace9 "9: Music"
-set $workspace10 "10: Monitoring"
+set $workspace1 "1: Frey"
+set $workspace2 "2: Arryn"
+set $workspace3 "3: Baratheon"
+set $workspace4 "4: Lannister"
+set $workspace5 "5: Stark"
+set $workspace6 "6: Tully"
+set $workspace7 "7: Tyrell"
+set $workspace8 "8: Targaryen"
+set $workspace9 "9: Greyjoy"
+set $workspace10 "10: Mormont"
 
 # switch to workspace
 bindsym $mod+1 workspace $workspace1
@@ -108,9 +111,9 @@ bindsym $mod+2 workspace $workspace2
 bindsym $mod+3 workspace $workspace3
 bindsym $mod+4 workspace $workspace4
 bindsym $mod+5 workspace $workspace5
-bindsym $mod+6 workspace 6
-bindsym $mod+7 workspace 7
-bindsym $mod+8 workspace 8
+bindsym $mod+6 workspace $workspace6
+bindsym $mod+7 workspace $workspace7
+bindsym $mod+8 workspace $workspace8
 bindsym $mod+9 workspace $workspace9
 bindsym $mod+0 workspace $workspace10
 
@@ -120,17 +123,17 @@ bindsym $mod+Shift+2 move container to workspace $workspace2
 bindsym $mod+Shift+3 move container to workspace $workspace3
 bindsym $mod+Shift+4 move container to workspace $workspace4
 bindsym $mod+Shift+5 move container to workspace $workspace5
-bindsym $mod+Shift+6 move container to workspace 6
-bindsym $mod+Shift+7 move container to workspace 7
-bindsym $mod+Shift+8 move container to workspace 8
+bindsym $mod+Shift+6 move container to workspace $workspace6
+bindsym $mod+Shift+7 move container to workspace $workspace7
+bindsym $mod+Shift+8 move container to workspace $workspace8
 bindsym $mod+Shift+9 move container to workspace $workspace9
 bindsym $mod+Shift+0 move container to workspace $workspace10
 
 # Programme die bestimmten Workspaces zugeordnet werden sollen
 
-for_window [class="Spotify"] move to workspace $workspace9
-assign [class="google-chrome"] $workspace2
-#assign [class="Spotify"] $workspace9
+# for_window [class="Spotify"] move to workspace $workspace9
+# assign [class="google-chrome"] $workspace2
+# assign [class="Spotify"] $workspace9
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
