--- a/config/i3/i3status.conf
+++ b/config/i3/i3status.conf
@@ -22,18 +22,17 @@ order += "tztime local"
 
 ethernet _first_ {
         # if you use %speed, i3status requires root privileges
-        format_up = "E: %ip"
+        format_up = "E: %ip (%speed)"
         format_down = "E: down"
 }
 
 wireless _first_ {
-        format_up = "W: %ip"
+        format_up = "W: %ip (%speed)"
         format_down = "W: down"
 }
 
 
 cpu_temperature 0 {
-
     path = /sys/devices/platform/coretemp.0/hwmon/hwmon1/temp3_input
 }
 battery 0 {
@@ -53,7 +52,7 @@ tztime local {
 }
 
 load {
-        format = "%1min"
+        format = "%5min"
 }
 
 disk "/" {
